refactor: restructure along GoCD's own conventions, and fix two process bugs
Reworks the plugin's internals to read the way the GoCD codebase does, and fixes
two defects found while doing it.

Structure
- One executor per SCM request (`scm/executor/`), replacing a 450-line god class.
  `GitSparseMaterialPlugin` now routes and handles failures, nothing else, and
  extends `AbstractGoPlugin`.
- An unknown request now throws `UnhandledRequestTypeException`, which is what the
  extension point declares, rather than returning a 400 nobody reads.
- Each executor decides how its own failures are shaped. `check-scm-connection`
  and `checkout` need a 200 carrying a failure status; the rest do not. That was a
  second switch on request names, kept in step with the first by hand.
- `ScmProperty` is a single source of truth for property metadata, so the
  configuration response, the unknown-key check and the typed accessors cannot
  drift apart.
- Runtime validation is now `MaterialConfiguration.assertUsable()` calling the same
  `validate()` the handler does, instead of a second hand-written copy of the rules,
  and it names the offending property — the message goes to a build console, where
  there is no field to attach it to.
- `Git.in(dir, config)` / `Git.forRemote(config)` replace a constructor that took a
  null directory for connection checks.
- `CommandLine`, `ConsoleResult` and `SecretRedactor` mirror the shape of GoCD's own
  classes of those names, which plugins cannot use directly.

Fixes
- CommandLine drained stdout to EOF before starting on stderr, which deadlocks as
  soon as the child fills the stderr pipe — `git fetch --unshallow` on a large
  repository does exactly that, and the agent hangs with no output. Both streams are
  now drained on their own threads. Verified: the old logic hangs on the same child
  the new test uses.
- The same sequential read made the 30-minute timeout unreachable, because nothing
  got as far as asking how long the process had bee